<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Locker</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="website_name">Website Name</string>
    <string name="website_url">Website URL</string>
    <string name="add_locker">Add to Locker</string>

</resources>