<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp" >

    <EditText
        android:id="@+id/et_locker_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_locker_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_locker_username"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >

    </EditText>

    <EditText
        android:id="@+id/et_locker_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_locker_email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_locker_webName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_locker_password"
        android:ems="10"
        android:hint="@string/website_name" />

    <EditText
        android:id="@+id/et_locker_weburl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_locker_webName"
        android:ems="10"
        android:hint="@string/website_url" />

    <Button
        android:id="@+id/btn_add_locker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_locker_weburl"
        android:text="@string/add_locker" />

</RelativeLayout>